fix: overflow: visible

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2768,7 +2768,7 @@ details-disclosure>details {
 	position: relative;
 	border: var(--media-border-width) solid rgba(var(--color-foreground), var(--media-border-opacity));
 	border-radius: var(--media-radius);
-	overflow: visible !important;
+	overflow: unset !important;
 	background-color: rgb(var(--color-background));
 }
 
